--- a/style.css
+++ b/style.css
@@ -41,13 +41,15 @@ header > h1{
 header > p{
     color: white;
     text-align: center;
-    margin: 10px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    margin: auto;
     
     
 }
 nav{
     background-color: var(--cor5);
-    padding: 10px;
+    padding: 40px 20px 10px 20px;
     text-align: center;
     
 }
